# mvBlueFOX_Webcam

./: .gitignore  CMakeLists.txt  README.md
src/: AquireHelper.hpp  Camera.cpp  Camera.hpp  CameraHelper.cpp  CameraHelper.hpp  CameraManager.cpp  CameraManager.hpp  FaceDetector.cpp  FaceDetector.hpp  FileHandleWrapper.cpp  FileHandleWrapper.hpp  Undistortion.cpp  Undistortion.hpp  Webcam.cpp  Webcam.hpp  main.cpp
